--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 ---
 layout: forward
-target: https://gaypage.lilyspadd.com/cdn/
+target: https://gaypage.lilyspadd.com/cdn/index.html
 sitemap: false
 ---
